c7-web-linux-vmss-nsg-inline-basic.tf
# nsg with terraform dynamic block

# crete nsg - regular
/*
resource "azurerm_network_security_group" "web_vmss_nsg" {
    name                = "${local.resource_name_prefix}-web-vmss-nsg"
    location            = azurerm_resource_group.rg.location
    resource_group_name = azurerm_resource_group.rg.name

    security_rule {
    name                       = "inbound-rule-HTTP"
    description = "Inbound Rule"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

    security_rule {
    name                       = "inbound-rule-HTTPS"
    description = "Inbound Rule"
    priority                   = 101
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "443"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

    security_rule {
    name                       = "inbound-rule-SSH"
    description = "Inbound Rule"
    priority                   = 102
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
}

*/

resource "azurerm_network_security_group" "web_vmss_nsg" {
    name                = "${local.resource_name_prefix}-web-vmss-nsg"
    location            = azurerm_resource_group.rg.location
    resource_group_name = azurerm_resource_group.rg.name
    
    dynamic "security_rule" {
        for_each = var.web_vmss_nsg_inbound_ports
        content {
            name                       = "inbound-rule-${security_rule.key}"
            description = "Inbound Rule ${security_rule.key}"
            priority                   = sum([100, security_rule.key])
            direction                  = "Inbound"
            access                     = "Allow"
            protocol                   = "Tcp"
            source_port_range          = "*"
            destination_port_range     = security_rule.value
            source_address_prefix      = "*"
            destination_address_prefix = "*"
        }
    }
}
